<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quill_logger</name>
  <version>0.1.0</version>
  <description>
    A ROS2 logger implementation based on Quill library that provides high-performance logging
    with configurable output formats and can be used as a drop-in replacement for the default ROS2 logger.
  </description>
  <maintainer email="maintainer@example.com">Ruslan Mambetov</maintainer>
  <author email="maintainer@example.com">Ruslan Mambetov</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rcl</depend>
  <depend>rcutils</depend>
  <depend>rosidl_runtime_c</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 